Fixes "features" section links size on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -347,7 +347,7 @@ a
     padding: 7px;
     background-color: rgba(0, 0, 0, 0.8);
     color: #EEEEEE;
-    margin-left: 1%;
+    margin: 1%;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
