--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,4 +77,10 @@
         width:100%;
         margin: 0%;
     }
+
+    .section_features_links
+    {
+        display: block;
+        text-align: center;
+    }
 }
